# docmind-cli

./: .gitignore  LICENSE  README.md  cli_new.py  pyproject.toml
docmind/engine/: __init__.py  enforce.py  fixer.py  spec_reader.py  writer.py
docmind/steps/: __init__.py  base.py  gov_doc.py  tech_doc.py  thesis.py
docmind/tools/: __init__.py  base.py  contract.py  gov_doc.py  tech_doc.py  thesis.py  translate.py
enforce/: __init__.py  config.py  odd_pages.py  pdf_reader.py  python_docx_fixup.py
generator/: pdf_converter.py  template_analyzer.py
pipeline/: __init__.py  agent.py  auto_discover.py  config.py  doc_discover.py  enforce_print.py  fixer_v2.py  format_body.py  orchestrator.py  preprocessor.py  reconciler_v2.py  setup_headers.py  spec_reader.py  spec_reader_v2.py  writer_v2.py
tests/: conftest.py  test_agent.py  test_ai_pipeline.py  test_boundary_scenarios.py  test_cli_e2e.py  test_content_provider.py  test_fixer_v2.py  test_formatter.py  test_llm_client.py  test_models.py  test_ocr_observer.py  test_ooxml_utils.py  test_template_analyzer.py  test_toc_builder.py  test_toc_real_pages.py  test_writer_v2.py
tests/test_enforce/: test_config.py  test_pdf_reader.py
tests/test_providers/: test_body.py  test_body_subsections.py  test_cover.py
