[project]
name = "docmind"
version = "2.0.0"
description = "DocMind 2.0 — 毕业设计文档生成与排版工具"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["thesis", "docx", "generation", "typesetting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-docx",
    "PyYAML",
    "lxml",
    "pymupdf",
    "click",
    "rich",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.12.0",
    "pre-commit>=4.0",
]

[project.scripts]
docmind = "cli_new:cli"

[project.urls]
Homepage = "https://github.com/user/docmind"
Repository = "https://github.com/user/docmind"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["generator", "enforce", "tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["docmind*", "pipeline*"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
